Fixed blogpost problem on mobile

--- a/src/main/webapp/assets/sass/pages/_home.scss
+++ b/src/main/webapp/assets/sass/pages/_home.scss
@@ -208,8 +208,6 @@
 		padding: 2px;
 		font-weight: 200;
 	  }
-
-	  height: 158px;
 	}
 
 	.blogpost__header {
